--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0"
