--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "@types/node": "^17.0.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
