--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "nodemon index.js"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "mongoose": "^6.1.3"
   },
   "devDependencies": {
+    "jest": "^27.4.5",
     "nodemon": "^2.0.15"
   }
 }
