--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.1.3"
+    "mongoose": "^6.1.3",
+    "mongoose-unique-validator": "^3.0.0"
   },
   "devDependencies": {
     "jest": "^27.4.5",
