--- a/part6/anecdotes-redux/package.json
+++ b/part6/anecdotes-redux/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -15,6 +16,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "json-server -p3001 --watch db.json",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "json-server": "^0.17.0",
     "redux-devtools-extension": "^2.13.9"
   }
 }
