--- a/part8/library-frontend/package.json
+++ b/part8/library-frontend/package.json
@@ -11,7 +11,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
-    "react-select": "^5.2.2"
+    "react-select": "^5.2.2",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
