--- a/part9/ts-exc/package.json
+++ b/part9/ts-exc/package.json
@@ -4,6 +4,7 @@
   "description": "First 7 exercises fullstackopen",
   "main": "index.js",
   "scripts": {
+    "calculateExercises": "ts-node exerciseCalculator.ts",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
