--- a/part9/ts-exc/package.json
+++ b/part9/ts-exc/package.json
@@ -6,14 +6,21 @@
   "scripts": {
     "calculateExercises": "ts-node exerciseCalculator.ts",
     "calculateBmi": "ts-node bmiCalculator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.15",
     "ts-node": "^10.5.0",
+    "ts-node-dev": "^1.1.8",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
   }
 }
