--- a/part9/ts-exc/package.json
+++ b/part9/ts-exc/package.json
@@ -8,13 +8,17 @@
     "calculateBmi": "ts-node bmiCalculator.ts",
     "start": "ts-node index.ts",
     "dev": "ts-node-dev index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ext .ts ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
     "ts-node": "^10.5.0",
     "ts-node-dev": "^1.1.8",
     "tslib": "^2.3.1",
