--- a/part9/patientor/package.json
+++ b/part9/patientor/package.json
@@ -22,7 +22,9 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "cors": "^2.8.5",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "uuid": "^8.3.2"
   }
 }
